<resources>
    <string name="app_name">ToDo</string>
    <string name="app_details">Do a lot of things.</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings for the Nav Bar -->
    <string name="nav_complete_tasks">Completed</string>
    <string name="nav_upcoming_tasks">Upcoming</string>
    <string name="nav_high_priority">High Priority</string>
    <string name="nav_all_tasks">All Tasks</string>
    <string name="nav_settings">@string/action_settings</string>

    <!-- Strings for priority -->
    <string name= "priority_high">High</string>
    <string name= "priority_med">Medium</string>
    <string name= "priority_low">Low</string>
    <string name= "priority_none">None</string>

    <!-- Strings for detail activity -->
    <string name="detail_title">Title</string>
    <string name="detail_details">Details</string>
    <string name="detail_priority"> Priority</string>
    <string name="detail_select_time">Time</string>
    <string name="detail_select_date">Date</string>
    <string name="detail_label">Label</string>
    <string name="detail_add_reminder">Add Reminder</string>

    <string name="action_delete">Delete</string>
    <string name="action_complete">Complete</string>

    <string-array name="detail_priority_values">
        <item>@string/priority_none</item>
        <item>@string/priority_high</item>
        <item>@string/priority_med</item>
        <item>@string/priority_low</item>
    </string-array>

    <!-- Strings related to Settings -->

    <!--Strings for extra menu-->
    <string name="action_sort">Sort</string>
    <string name="action_search">Search</string>

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_sort_method">Default sorting method</string>
    <string name="toolbar_sort_title">Sort by:</string>
    <string-array name="pref_sort_list_titles">
        <item>Priority</item>
        <item>Time</item>
        <item>Alphabetically</item>
    </string-array>
    <string-array name="pref_sort_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
