<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:checkableBehavior="single"
        android:id="@+id/menu_upper">
        <item
            android:id="@+id/all_tasks"
            android:title="@string/nav_all_tasks" />
        <item
            android:id="@+id/high_priority_tasks"
            android:title="@string/nav_high_priority" />
        <item
            android:id="@+id/upcoming_tasks"
            android:title="@string/nav_upcoming_tasks"/>
        <item
            android:id="@+id/completed_tasks"
            android:title="@string/nav_complete_tasks" />
    </group>

<!--
    <item android:title="Labels">
        <menu>
            <item
                android:id="@+id/bogus_label"
                android:title="College Prep" />
        </menu>
    </item>
-->

    <group
        android:checkableBehavior="single"
        android:id="@+id/menu_lower">
        <item
            android:id="@+id/action_settings"
            android:title="@string/action_settings" />
    </group>

</menu>
