<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/container"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/text_input_1"
        android:layout_gravity="start|start">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edit_title"
            android:hint="@string/detail_title" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/text_input_2"
        android:layout_below="@id/text_input_1">

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:hint="@string/detail_details"
            android:ems="10"
            android:id="@+id/edit_details"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.v4.widget.Space
        android:layout_width="1dp"
        android:id="@+id/space_1"
        android:layout_height="15dp"
        android:layout_below="@id/text_input_2"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/detail_select_time"
        android:id="@+id/time_selector"
        android:layout_below="@id/space_1"/>


</RelativeLayout>